--- a/nginx.conf
+++ b/nginx.conf
@@ -32,7 +32,7 @@ http {
     #gzip  on;
 
     upstream uwsgi {
-        server web.weave.local;
+        server web:3031;
     }
 
     #server {
@@ -56,38 +56,4 @@ http {
         return 301 https://$host$request_uri;
     }
 
-    # HTTPS server
-    #
-    server {
-        listen       443 ssl;
-    #    server_name  localhost;
-
-        location / {
-            include uwsgi_params;
-            uwsgi_pass uwsgi;
-    #        uwsgi_param                HTTP_Country-Code $geoip_country_code;
-            uwsgi_pass_request_headers      on;
-        }
-
-        location /static {
-           alias /app/app/static;
-        }
-
-#        location /football-data.events {
-#           alias /app/app/static/football-data.events;
-#        }
-
-        ssl_certificate      /certs/balance.tech.crt;
-        ssl_certificate_key  /certs/balance.tech.key;
-
-        ssl_session_cache    shared:SSL:1m;
-        ssl_session_timeout  10m;
-
-        ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-
-        ssl_ciphers  HIGH:!aNULL:!MD5;
-        ssl_prefer_server_ciphers  on;
-
-   }
-    include servers/*;
-}
+    
