--- a/nginx.conf
+++ b/nginx.conf
@@ -23,11 +23,11 @@ http {
 
     #access_log  logs/access.log  main;
 
-    sendfile        on;
+    # sendfile        on;
     #tcp_nopush     on;
 
     #keepalive_timeout  0;
-    keepalive_timeout  65;
+    # keepalive_timeout  65;
 
     #gzip  on;
 
